fixed emoji picker display & prevented users images stretching

--- a/src/scss/_chat-main.scss
+++ b/src/scss/_chat-main.scss
@@ -18,9 +18,12 @@
 .message-user-avatar{
     border-radius: 50%;
     width: 100px;
+    height: 100px;
     max-width: 250px;
+    max-height: 250px;
     float: left;
     margin: 0 1.5em 1em 0;
+    object-fit: cover;
 }
 
 .message-timestamp{
